Starting with the first notebooks

--- a/ipynb/1-encodings.ipynb
+++ b/ipynb/1-encodings.ipynb
@@ -38,7 +38,7 @@
    "metadata": {},
    "source": [
     "-------\n",
-    "The source of this huge problem for python programmers is to understand how python threat string and how python deal with strings and how we should tailor our scripts in order to avoid this problem.\n"
+    "The source of this huge problem for python programmers is to understand how python deal with strings and how we should tailor our scripts in order to avoid problems.\n"
    ]
   },
   {
@@ -52,8 +52,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/usr/local/lib/python2.7/dist-packages/IPython/kernel/__main__.py:3: UnicodeWarning: Unicode equal comparison failed to convert both arguments to Unicode - interpreting them as being unequal\n",
-      "  app.launch_new_instance()\n"
+      "/usr/local/lib/python2.7/dist-packages/IPython/kernel/__main__.py:3: UnicodeWarning: Unicode equal comparison failed to convert both arguments to Unicode - interpreting them as being unequal\n"
      ]
     }
    ],
